--- a/app/src/main/res/layout-land/fragment_camera2.xml
+++ b/app/src/main/res/layout-land/fragment_camera2.xml
@@ -12,14 +12,26 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"/>
 
+    <cn.lytcom.camera2kit.PreviewOverlay
+        android:id="@+id/preview_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <cn.lytcom.camera2kit.FocusView
+        android:id="@+id/focusView"
+        android:layout_width="@dimen/focus_view_size"
+        android:layout_height="@dimen/focus_view_size"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@color/colorPrimary"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:padding="10dp">
 
         <Button
             android:id="@+id/picture"
