--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,4 +8,10 @@
         android:icon="@drawable/ic_flash_auto"
         android:title="@string/flash_auto"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/switch_camera"
+        android:icon="@drawable/ic_switch_camera"
+        android:title="@string/switch_camera"
+        app:showAsAction="ifRoom"/>
 </menu>
